# product-demand-forecasting-system

./: LICENSE  README.md  main.py  params.yaml  pyproject.toml  requirements.txt  schema.yaml  template.py
config/: config.yaml
research/: data_ingestion.ipynb  data_taransformation.ipynb  data_validation.ipynb  model_training.ipynb
src/productdemand/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_training.py
src/productdemand/config/: configuration.py
src/productdemand/entity/: config_entity.py
src/productdemand/exception/: custom_exception.py
src/productdemand/logger/: custom_logger.py
src/productdemand/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_training_pipeline.py
src/productdemand/utils/: common.py
