[project]
name = "product-demand-forecasting-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ensure>=1.0.4",
    "fastapi>=0.138.0",
    "gunicorn>=26.0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "python-box>=7.4.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "structlog>=26.1.0",
    "tqdm>=4.68.3",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]
